# ServerC/Interfaces/IFeaturesService.cs
@@ -4,12 +4,12 @@ using System.Threading.Tasks;
 
 namespace ServerC.Interfaces
 {
-    public interface IFeaturesService
-    {
-        Task<Feature> CreateFeatureAsync(Feature feature);
-        Task<IEnumerable<Feature>> GetAllFeaturesAsync();
-        Task<IEnumerable<Feature>> GetFeaturesByCompanyAsync(int companyId);
-        Task<Feature> UpdateFeatureAsync(Feature feature);
-        Task<bool> DeleteFeatureAsync(int featureId);
-    }
+  public interface IFeaturesService
+  {
+    Task<Feature> CreateFeatureAsync(CreateFeatureInput createFeatureInput);
+    Task<IEnumerable<Feature>> GetAllFeaturesAsync();
+    Task<IEnumerable<Feature>> GetFeaturesByCompanyAsync(int companyId);
+    Task<Feature> UpdateFeatureAsync(Feature feature);
+    Task<bool> DeleteFeatureAsync(int featureId);
+  }
 }
